--- a/src/components/ButtonAdd.css
+++ b/src/components/ButtonAdd.css
@@ -16,4 +16,5 @@
     font-family: 'Readex Pro', sans-serif;
     justify-content: center;
     align-items: center;
+    border: 1px solid #B82323;
 }
